@@ -83,6 +83,15 @@ void testmemory(void)
   ASSERT(strlen("test") == 4);
   ASSERT(strlen("t") == 1);
   ASSERT(strlen("") == 0);
+
+  destination[2] = 0;
+  destination[3] = 0;
+#ifndef PORT_HOST
+  ASSERT(memccpy(destination, source, 2, 4) == destination + 3);
+  ASSERT(destination[2] == 2);
+  ASSERT(destination[3] == 0);
+#endif
+  
 #endif
 }
 
